# gemma-slow-harness

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  ROADMAP.md  __main__.py  pyproject.toml  requirements.txt
examples/: casting_cost_prompt.md  repo_debug_prompt.md
examples/eval/: creative_build_tasks.jsonl  repo_maintenance.jsonl
examples/skills/: casting_cost_ml_workflow.md
harness/: __init__.py  agent.py  cli.py  code_agent.py  config.py  eval.py  git_ops.py  learning.py  llm.py  macos_control.py  memory_policy.py  patching.py  prompts.py  rag.py  repo_context.py  tool_loop.py  tools.py  utils.py
reports/evals/: creative_build_eval_2026-06-05.jsonl  creative_build_eval_2026-06-05.md
scripts/: mac_setup.sh  ollama_gemma4_setup.sh  ollama_memory_emergency.sh  ollama_memory_safe.sh  ollama_memory_strong.sh  smoke_lmstudio.sh  smoke_mlx_gemma4.sh  smoke_ollama_gemma4.sh
tests/: test_codex_layer.py  test_eval.py  test_learning_store.py  test_macos_control.py  test_memory_policy.py  test_rag_chunking.py  test_safe_path.py
