[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gemma-slow-harness"
version = "0.5.0"
description = "Mac-first local coding harness for small repo-aware 4-bit models"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
gemma-harness = "harness.cli:main"
